--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,5 +1,11 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background: rgb(99, 37, 169);
+  background: lightgrey;
   font-size: 16px;
   font-family: Rubik, Roboto, sans-serif;
   padding: 0;
@@ -15,14 +21,8 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
-  padding: 0;
   font-size: 16px;
   line-height: 24px;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 img {
