--- a/client/src/styles/Main.module.css
+++ b/client/src/styles/Main.module.css
@@ -45,8 +45,9 @@
 
 .button {
   cursor: pointer;
-  width: 100%;
-  height: 100%;
+  width: 320px;
+  height: 48px;
+  border-radius: 12px;
   background: #0d49d7;
   font-size: 16px;
   font-weight: 700;
